# gl_kernel_procamp_2021

./: .clang-format  .gitignore  README.md  logs.txt
01_git/: .gitignore  Makefile  main.c  makefile  rand  rock_scissors_paper.c  rock_scissors_paper.h  scissors.c  scissors.h  scissors.py  scissors.sh  scissors1  scissors_game  scissors_rand.c  solution.txt
01_git/rps/: .gitignore  CMakeLists.txt
01_git/rps/src/: main.cpp
01_git/rps/src/datatypes/: constants.h  enums.h
01_git/rps/src/driver/: player_move.cpp  player_move.h
01_git/rps/src/ui/: user_interface.h
02_bash/: README.md  hwdetech.sh  hwdetect  hwdetect.sh  hwdetector.sh  tmp_devices.txt
03_module/: .built-in.a.cmd  .main.ko.cmd  .main.mod.cmd  .main.mod.o.cmd  .main.o.cmd  Log_Module.txt  Makefile  README.md  argsmod.c  compilation_log.txt  console_log.txt  custom_printk.c  dmesg_log.txt  dump.txt  hello.c  hello_mod.c  kernel-log.sh  kernel_log.txt  kmodule.c  logs_dump.txt  main.c  main.ko  main.mod  main.mod.c  math.c  module_hello.c  modules.order  mymodule.c  par_module.c  prmmod.c  result_kernel_log.txt  simplest-kernel-module.c  sum.c  sum_sub.c
04_basic_srtuct/: Log_basic_struct.txt  Makefile  README.md  basic_struct.c  basic_struct.ko  test_S_mod.sh
04_basic_struct/: .gitignore  Log_struct.txt  Makefile  README.md  basic_struct_module.c  build_log.txt  console_log.txt  custom_attributes.c  dmesg_log.txt  dump.txt  hello.c  kobj.c  kobject-module.c  (+9 more)
10_chardev/: CMakeLists.txt  Makefile  REAMDE.md  chardev_mod.c  chrdev_mod.c  dev.h  gpio_chardev.c  gpio_chardev_ioctl.h  index.html  ioctl_app.c  ioctl_common.h  ioctl_mod.c  ioctrl_usrspace.c  logs.txt  main.cpp  orange_zero_profile  server.c  user_app.c
10_chardev/include/: ioctl.h
10_chardev/user/: Makefile  led_ioctl.c
10_chardev/userspace/: index.html  server.c
(+307 files in other folders)
